<resources>
    <string name="app_name">Umemory</string>
    <string name="term_1day">1day</string>
    <string name="term_3day">3day</string>
    <string name="term_7day">7day</string>
    <string name="term_1month">1month</string>
    <string name="today">復習</string>
    <string name="create">登録</string>
    <string name="random">ランダム</string>
    <string name="random_name">数字ランダム表示</string>
    <string name="random_start">Start</string>
    <string name="taskCreate">Create</string>
    <string name="taskCreated">登録しました。</string>
    <string name="randomCreate">Random</string>
    <string name="randomCreated">設定しました。</string>
    <string name="OK">OK</string>
    <string name="random_create_btn">設定</string>
    <string name="big_small_check">大小が正しくありません。</string>
    <string name="history">登録履歴</string>
    <string name="histories">履歴</string>
    <string name="input_no_char_error">文字を入力してください。</string>
    <string name="added_task">追加しました。</string>
    <string name="e_mail">メールアドレス</string>
    <string name="password">パスワード</string>
    <string name="signup">新規登録</string>
    <string name="signup_button">登録</string>
    <string name="login">ログイン</string>
    <string name="logout">ログアウト</string>
    <string name="no_login_btn">ログインせずに使用する</string>
    <string name="confirm_password">確認用パスワード</string>
    <string name="input_mail">メールアドレスを入力してください.</string>
    <string name="input_pass">パスワードを入力してください。</string>
    <string name="dif_pass">パスワードと確認用パスワードが異なります。</string>
    <string name="answer">詳細/答え</string>
    <string name="remember_task">タスク/問題</string>
    <string name="from">from</string>
    <string name="to">to</string>
    <string name="fromTo">~</string>
    <string name="Start">Start</string>
    <string name="firebase_status_fmt">Firebase UID: %s</string>
    <string name="google_status_fmt">Google User: %s</string>
    <string name="google_login">Googleでログイン</string>
    <string name="please_input">入力して下さい。</string>
</resources>